--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-movie",
+  "name": "react-simple-movies",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,19 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "format-date-time": "^0.3.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
-    "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.21.3",
-    "sass": "^1.70.0",
+    "react-scripts": "^5.0.1",
     "swiper": "^11.0.5",
-    "swr": "^2.2.4",
-    "uuid": "^9.0.1",
-    "web-vitals": "^3.5.1"
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
