--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://{username}.github.io/{repo-name}/",
+  "homepage": "https://phanvuongtb.github.io/Simple-Movie/",
   "name": "react-simple-movies",
   "private": true,
   "version": "0.0.0",
